# Aether

./: .dockerignore  .env.example  Cargo.toml  Dockerfile.app  Dockerfile.app.local  README.md  deploy.sh  dev.sh  docker-compose.build.yml  docker-compose.yml  generate_keys.sh
apps/aether-gateway/: Cargo.toml
apps/aether-gateway/examples/: execution_runtime_harness.rs  tunnel_runtime_harness.rs
apps/aether-gateway/src/: admin_api.rs  ai_pipeline_api.rs  constants.rs  fallback_metrics.rs  frontdoor_loop_guard.rs  gateway.rs  handlers.rs  headers.rs  lib.rs  main.rs  provider_key_auth.rs  rate_limit.rs  request_candidate_runtime.rs  request_candidates.rs  response.rs
apps/aether-gateway/src/ai_pipeline/: mod.rs  private_response.rs  private_surfaces.rs
apps/aether-gateway/src/api/: core.rs  mod.rs  ops.rs
apps/aether-gateway/src/async_task/: http.rs  mod.rs  query.rs  runtime.rs
apps/aether-gateway/src/audit/: http.rs  mod.rs  shadow.rs
apps/aether-gateway/src/auth/: mod.rs  runtime.rs  trusted.rs
apps/aether-gateway/src/billing_runtime/: mod.rs  runtime.rs
apps/aether-gateway/src/cache/: dashboard_response.rs  mod.rs
apps/aether-gateway/src/control/: execute.rs  mod.rs  public.rs  route.rs
apps/aether-gateway/src/data/: candidate_selection.rs  tests.rs
apps/aether-gateway/src/execution_runtime/: constants.rs  fallback.rs  kiro_web_search.rs  mod.rs  ndjson.rs  remote_compat.rs  server.rs  stream.rs  stream_pump.rs  submission.rs  sync.rs  tests.rs  transport.rs
apps/aether-gateway/src/executor/: candidate_loop.rs  mod.rs  outcome.rs
apps/aether-gateway/src/gateway/: exports.rs  router.rs  state.rs
apps/aether-gateway/src/gateway_cache/: auth_context.rs  scheduler_affinity.rs
apps/aether-gateway/src/gateway_data/: auth.rs  candidates.rs  decision_trace.rs  gemini.rs  mod.rs  openai.rs  tests.rs  video_tasks.rs
apps/aether-gateway/src/handlers/: proxy.rs  shared.rs
apps/aether-gateway/src/hooks/: audit.rs  mod.rs  shadow.rs
apps/aether-gateway/src/intent/: constants.rs  (+6 more)
crates/aether-executor/: Cargo.toml
crates/aether-executor/src/: client.rs  error.rs  lib.rs  main.rs  ndjson.rs  server.rs  service.rs  transport.rs
(+1166 files in other folders)
