[package]
name = "aether-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust executor scaffold for Aether request execution"

[dependencies]
aether-contracts.workspace = true
async-stream.workspace = true
axum = { version = "0.8" }
base64.workspace = true
bytes.workspace = true
clap = { version = "4", features = ["derive", "env"] }
flate2.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots.workspace = true
